[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-helpers-yaml"
version = "0.0.64"
description = "Helpers for reading yaml files."
authors = [
    { name = "weeger", email = "contact@wexample.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pydantic>=2,<3",
    "pyyaml",
    "wexample-helpers",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers-yaml"

[project.optional-dependencies]
dev = ["pytest"]

[tool.pdm.build]
includes = ["python_package_workdir/py.typed"]
