[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "wexample-helpers-yaml"
version = "0.0.73"
description = "Helpers for reading yaml files."
authors = [{name = "weeger", email = "contact@wexample.com"}]
requires-python = ">=3.10"
classifiers = ["Programming Language :: Python :: 3", "License :: OSI Approved :: MIT License", "Operating System :: OS Independent"]
dependencies = [
    "attrs>=23.1.0",
    "cattrs>=23.1.0",
    "pyyaml",
    "wexample-helpers==0.0.77",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.license]
text = "MIT"

[project.urls]
homepage = "https://github.com/wexample/python-helpers-yaml"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
]

[tool.pdm]
distribution = true

[tool.pdm.build]
package-dir = "src"

[[tool.pdm.build.packages]]
include = "wexample_helpers_yaml"
from = "src"
[tool.setuptools.packages.find]
include = ["*"]
exclude = ["wexample_helpers_yaml.testing*"]
